# fraud-detection-apps

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  academy_lesson_!.py  academy_lesson_1.py  audiobox.py  big-o-notations-notes.py  clean_data.ipynb  client_uploads.py  compare_all.py  compare_json_messages.py  compary.py  conditionals.py  console_print.py  decorator_trips.py  dotpythonstartup.py  file_munging.py  flash_starter.sh  fraud_detection.ipynb  functionals.py  functions_kickoff.py  homework.md  hommy.snb.ipynb  http_status.py  itunes.py  listbox.py  mac_autocompletion.py  mac_cleanup.sh  manifest.csv  massive_comparison.py  pandas_funds_arts.ipynb  primey.py  process_server_logs.py  pyhelp.py  pyproject.toml  requirements-dev.txt  requirements.txt  restaurant.py  restaurants-lesson8.csv  (+9 more)
apps/: audiobox.py  self_service.py
longest-word/: Pipfile
longest-word/src/: Dockerfile  requirements.txt
longest-word/src/app/: wordapp.py
longest-word/src/tests/: test_api.py  test_wordapp.py
mysiri/: audio.py  commander.py  commands.py  get_answers.py  main.py  pyproject.toml  requiremetns.txt  transcriber.py  wav_transcribe.py
mysiri/tests/: test_commands.py  test_get_answers.py
pecan/: Pipfile  README.md  main.py  requirements.txt
pecan/tests/: test_pecan.py
teach/: academy_lesson_1.py  homework.md  restaurant.py
utils/: compare_all.py  compare_messages.py  compary.py  date_diffs.py  functionals.py  itunes.py  mac_autocompletion.py  mac_cleanup.sh  primey.py  process_server_logs.py  stats.py  tab_completion.py
