[project]
name = "fraud-detection-apps"
version = "0.0.1"
description = "Fraud Detection Apps"
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "black",
    "interrogate",
    "pycln",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "mypy",
    "types-pyyaml",
    "types-requests",
]
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''

[tool.pycln]
all = true


[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 95
exclude = ["setup.py", "docs", "build"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
generate-badge = "."
badge-format = "svg"

[tool.uv.workspace]
members = [
    "longest-word",
    "mysiri",
]

[dependency-groups]
dev = [
    "interrogate>=1.7.0",
    "pyrefly>=0.39.4",
    "ruff>=0.14.2",
    "ty>=0.0.1a25",
]
