[project]
name = "mysiri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8, <4.0"
dependencies = [
    "requests",
    "beautifulsoup4",
    "SpeechRecognition",
    "PyAudio",
    "pyglet",
]

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.2",
    "ty>=0.0.1a25",
]
